--- a/.gitignore
+++ b/.gitignore
@@ -171,6 +171,10 @@ LIBTEXTSTYLE-DIFF
 MAKE-TAGS
 NOTES-off-git
 STASHES
+TEST
+TODO
+TOUCH
+jitter-talk-2021-03
 TESTED-CONFIGURATIONS
 THE-IMPORTANT-PATCH
 ULIMIT
