add minimal-threading support for ARM
The lack of a hardware division instruction will provide for some testing
opportunities in this case.

* Makefile.am (EXTRA_DIST): Distribute new files.

* configure.ac (JITTER_ASSEMBLY_SUBDIRECTORY, jitter_supports_minimal_threading)
[arm]: Define.

* machine/arm/jitter/machine/jitter-machine-assembly.S: New file.
* machine/arm/jitter/machine/jitter-machine-c.c: New file.
* machine/arm/jitter/machine/jitter-machine.h: New file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -872,6 +872,9 @@ EXTRA_DIST += \
   machine/alpha/jitter/machine/jitter-machine.h \
   machine/alpha/jitter/machine/jitter-machine-assembly.S \
   machine/alpha/jitter/machine/jitter-machine-c.c \
+  machine/arm/jitter/machine/jitter-machine.h \
+  machine/arm/jitter/machine/jitter-machine-assembly.S \
+  machine/arm/jitter/machine/jitter-machine-c.c \
   machine/m68k/jitter/machine/jitter-machine.h \
   machine/m68k/jitter/machine/jitter-machine-assembly.S \
   machine/m68k/jitter/machine/jitter-machine-c.c \
