--- a/configure.ac
+++ b/configure.ac
@@ -1272,8 +1272,20 @@ AS_CASE([$default_host_cpu],
                         jitter_objdump_options="--architecture=sparc:v9b --disassembler-options=no-aliases"],
         [x86_64],      [AC_DEFINE_UNQUOTED([JITTER_HOST_CPU_IS_X86_64], [1], []
                                            ) # No ";": see the Autoconf manual.
-                        JITTER_ASSEMBLY_SUBDIRECTORY=x86_64;
-                        jitter_has_host_assembly=yes;
+                        if test "x$ac_cv_sizeof_void_p" = 8; then
+                          # Ordinary x86_64 in long mode, sizeof (void *) == 8.
+                          JITTER_ASSEMBLY_SUBDIRECTORY=x86_64;
+                          jitter_has_host_assembly=yes;
+                        elif test "x$ac_cv_sizeof_void_p" = 4; then
+                          # Special case, for handling -m32: if sizeof (void *)
+                          # is not 64 bits, treat this as i386.
+                          # Presumably we are using -m32.
+                          # FIXME: i386
+                          true
+                        else
+                          AC_MSG_ERROR([this should never happen: on x86_64 we
+have that sizeof (void *) is not 8 nor 4])
+                        fi;
                         jitter_objdump_options="--architecture=i386:x86-64 --disassembler-options=x86-64,att,suffix"],
                        # Default case.  Notice that, as a fallback case, we call
                        # objdump with "--architecture=" , without actually
