configure.ac: fix obvious bug in recently introduced conditional
* configure.ac (JITTER_ASSEMBLY_SUBDIRECTORY, jitter_supports_minimal_threading)
(jitter_supports_no_threading) [x86_64]: Fix conditional.  Improve error
message.

--- a/configure.ac
+++ b/configure.ac
@@ -1463,12 +1463,12 @@ AS_CASE([$default_host_cpu],
                                            ) # No ";": see the Autoconf manual.
                         # x86_64 is used in several unusual ways where the
                         # pointer size is not 64 bits.  Check.
-                        if test "x$ac_cv_sizeof_void_p" = 8; then
+                        if test "x$ac_cv_sizeof_void_p" = 'x8'; then
                           # Ordinary x86_64 in long mode, sizeof (void *) == 8.
                           JITTER_ASSEMBLY_SUBDIRECTORY=x86_64
                           jitter_supports_minimal_threading=yes
                           jitter_supports_no_threading=yes
-                        elif test "x$ac_cv_sizeof_void_p" = 4; then
+                        elif test "x$ac_cv_sizeof_void_p" = 'x4'; then
                           # Special case, for handling -m32: if sizeof (void *)
                           # is not 64 bits, treat this as i386.
                           # Presumably we are using -m32.
@@ -1476,7 +1476,7 @@ AS_CASE([$default_host_cpu],
                           true
                         else
                           AC_MSG_ERROR([this should never happen: on x86_64 we
-have that sizeof (void *) is not 8 nor 4])
+have that sizeof (void *) is $ac_cv_sizeof_void_p instead of 8 nor 4])
                         fi],
                        # Default case.
                        [])
