tentatively change --cppflags to omit -I prefix on cross-compilation
The autoconf macros defined from jitter --cppflags get automatically changed, of
course.

* configure.ac (JITTER_CROSS_COMPILING): New substitution.

* bin/jitter-config.in.m4sh (main loop) <--cppflags>: Introduce conditional on
the new substitution.

Suggested by Romain Naour, after his difficulties with building GNU poke with
buildroot.

--- a/configure.ac
+++ b/configure.ac
@@ -308,6 +308,7 @@ else
    AC_MSG_RESULT([yes, cross-compiling from $build to $host .])
    jitter_cross_compiling=yes
 fi
+AC_SUBST([JITTER_CROSS_COMPILING], [$jitter_cross_compiling])
 
 # I never test on weird systems not supporting shebangs.
 AC_SYS_INTERPRETER
